# world-gen

./: .gitignore  README.md  pyproject.toml  requirements.txt
Notes/: field_notes.md
awm/: api.py  config.yaml
awm/assets/: catalog.json
awm/conf/: config.yaml
awm/core/: __init__.py  agent.py  benchmark.py  llm.py  server.py  tools.py
awm/core/generator/: __init__.py  generate_assets.py  generate_layout.py  generate_world.py  prompts.py
awm/core/runtime/: __init__.py  engine.py  tools.py  types.py  verifier.py
awm/core/utils/: __init__.py  llm.py
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  state.tsx  types.ts
frontend/src/components/: Pipeline.tsx  RightDock.tsx  WorldView.tsx  ui.tsx
world-gen/: api.py
world-gen/conf/: config.yaml
world-gen/core/: agent.py  render.py
world-gen/core/generator/: __init__.py  db.py  generate_layout.py  schema.sql
world-gen/core/runtime/: __init__.py  engine.py
world-gen/core/utils/: __init__.py
