[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "worldgen"
version = "0.1.0"
description = "Verifiable 2D world generation with code-based tool calls"
readme = "README.v2.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic",
    "mcp",
    "mcp-agent",
    "omegaconf",
    "pygame",
    "pillow",
    "python-dotenv",
]

[project.optional-dependencies]
studio = [
    "fastapi",
    "uvicorn[standard]",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["awm*"]
