[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "worldgen"
version = "0.1.0"
description = "Verifiable 2D world generation with code-based tool calls"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic",
    "mcp",
    "mcp-agent",
    "omegaconf",
    "pygame",
    "pillow",
    "python-dotenv",
]

[project.optional-dependencies]
studio = [
    "fastapi",
    "uvicorn[standard]",
]

[tool.setuptools]
package-dir = {"worldgen" = "world-gen"}
packages = [
    "worldgen",
    "worldgen.core",
    "worldgen.core.generator",
    "worldgen.core.runtime",
    "worldgen.core.utils",
]
